[project]
name = "bedrock_app"
version = "0.1.0"
description = "A Python application interacting with AWS Bedrock for AI-powered features."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pyyaml",
    "autogen",
    "boto3"
]


[tool.poetry]
name = "bedrock_app"
version = "0.1.0"
packages = [{ include = "src" }]

[tool.poetry.scripts]
app = "src.main:app"

[build-system]
requires = ["poetry-core"] 
build-backend = "poetry.core.masonry.api"
